# rust-practice-ground

./: README.md
hello_package/src/: back_of_house.rs  lib.rs  main.rs
hello_package/src/front_of_house/: hosting.rs  serving.rs
hello_world/: Cargo.toml  message.txt
hello_world/benches/: my_benchmark.rs
hello_world/output/: message.txt
hello_world/src/: main  main.rs  main1.rs  main10.rs  main11.rs  main12.rs  main13.rs  main14.rs  main15.rs  main16.rs  main17.rs  main18.rs  main19.rs  main2.rs  main20.rs  main21.rs  main22.rs  main23.rs  main24.rs  main25.rs  main26.rs  main27.rs  main28.rs  main29.rs  main3.rs  main30.rs  main31.rs  main33.rs  main34.rs  main35.rs  main36.rs  main37.rs  main38.rs  main39.rs  main4.rs  main40.rs  main41.rs  main42.rs  main43.rs  main44.rs  (+14 more)
hello_world_practice/: Cargo.toml
hello_world_practice/src/: main  main.rs  main0.rs  main1.rs  main10.rs  main11.rs  main12.rs  main13.rs  main14.rs  main15.rs  main16.rs  main17.rs  main18.rs  main19.rs  main2.rs  main20.rs  main21.rs  main22.rs  main23.rs  main24.rs  main3.rs  main4.rs  main5.rs  main6.rs  main7.rs  main8.rs  main9.rs
hello_world_practice/src/config/: settings.txt
