[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
secp256k1 = "0.23.0"
bitcoin_hashes = "0.15.0"
bs58 = "0.4.0"
hex = "0.4.3"
criterion = "0.5"  # Latest version of Criterion

[[bench]]
name = "my_benchmark"
harness = false